--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
   width: 300px;
 }
 .red4 {
-  color: red;
+  color: green;
+  font-size: 21px;
 }
+
 body {
-  background-color: green;
+  background-color: gray;
 }
